// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal useModal opens and closes modal 1`] = `
<body>
  <div
    data-base-ui-inert=""
    id="modal-root"
  />
  <div>
    <div
      class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
    >
      <style
        data-base-ui-inert=""
      >
        html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

      </style>
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-base-ui-inert=""
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
      <div
        data-base-ui-portal=""
        id=":r1:"
      >
        <div
          class="fixed z-modal inset-0 bg-black/50 transition-opacity data-starting-style:opacity data-ending-style:opacity"
          data-base-ui-inert=""
          data-open=""
          data-starting-style=""
          role="presentation"
          style="user-select: none; transition-duration: 300ms;"
        />
        <span
          aria-hidden="true"
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
        <div
          class="fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center transition-opacity data-starting-style:opacity data-ending-style:opacity"
          data-base-ui-focusable=""
          data-open=""
          data-starting-style=""
          id=":r0:"
          role="dialog"
          style="--nested-dialogs: 0; transition-duration: 300ms;"
          tabindex="-1"
        >
          <div
            class="bg-white shadow-2 transition-shadow duration-300 delay-0 outline-hidden overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
            tabindex="-1"
          >
            <p>
              Modal content
            </p>
            <button
              aria-disabled="false"
              class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
              data-component-type="button"
              role="button"
              tabindex="0"
              type="button"
            >
              <span
                class="items-center inline-flex font-semibold whitespace-nowrap text-button"
              >
                Hide
              </span>
            </button>
          </div>
        </div>
        <span
          aria-hidden="true"
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
      </div>
      <span
        aria-hidden="true"
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <span
        aria-owns=":r1:"
        data-base-ui-inert=""
        style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
      />
      <span
        aria-hidden="true"
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`Modal useModal opens and closes modal 2`] = `
<body>
  <div
    id="modal-root"
  />
  <div>
    <div
      class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
    >
      <style>
        html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

      </style>
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`Modal useModal shows multiple modals at the same time 1`] = `
<body>
  <div
    data-base-ui-inert=""
    id="modal-root"
  />
  <div>
    <div
      class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
    >
      <style
        data-base-ui-inert=""
      >
        html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

      </style>
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-base-ui-inert=""
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show first
        </span>
      </button>
      <span
        aria-hidden="true"
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <span
        aria-owns=":r4:"
        data-base-ui-inert=""
        style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
      />
      <span
        aria-hidden="true"
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-base-ui-inert=""
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="items-center inline-flex font-semibold whitespace-nowrap text-button"
        >
          Show second
        </span>
      </button>
      <div
        data-base-ui-inert=""
        data-base-ui-portal=""
        id=":r4:"
      >
        <div
          class="fixed z-modal inset-0 bg-black/50 transition-opacity data-starting-style:opacity data-ending-style:opacity"
          data-base-ui-inert=""
          data-open=""
          data-starting-style=""
          role="presentation"
          style="user-select: none; transition-duration: 300ms;"
        />
        <span
          aria-hidden="true"
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
        <div
          class="fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center transition-opacity data-starting-style:opacity data-ending-style:opacity"
          data-base-ui-focusable=""
          data-open=""
          data-starting-style=""
          id=":r2:"
          role="dialog"
          style="--nested-dialogs: 0; transition-duration: 300ms;"
          tabindex="-1"
        >
          <div
            class="bg-white shadow-2 transition-shadow duration-300 delay-0 outline-hidden overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
            tabindex="-1"
          >
            <p>
              First modal content
            </p>
          </div>
        </div>
        <span
          aria-hidden="true"
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
      </div>
      <div
        data-base-ui-portal=""
        id=":r5:"
      >
        <div
          class="fixed z-modal inset-0 bg-black/50 transition-opacity data-starting-style:opacity data-ending-style:opacity"
          data-base-ui-inert=""
          data-open=""
          data-starting-style=""
          role="presentation"
          style="user-select: none; transition-duration: 300ms;"
        />
        <span
          aria-hidden="true"
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
        <div
          class="fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center transition-opacity data-starting-style:opacity data-ending-style:opacity"
          data-base-ui-focusable=""
          data-open=""
          data-starting-style=""
          id=":r3:"
          role="dialog"
          style="--nested-dialogs: 0; transition-duration: 300ms;"
          tabindex="-1"
        >
          <div
            class="bg-white shadow-2 transition-shadow duration-300 delay-0 outline-hidden overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
            tabindex="-1"
          >
            <p>
              Second modal content
            </p>
          </div>
        </div>
        <span
          aria-hidden="true"
          data-base-ui-focus-guard=""
          data-base-ui-inert=""
          data-type="inside"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="0"
        />
      </div>
      <span
        aria-hidden="true"
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
      <span
        aria-owns=":r5:"
        data-base-ui-inert=""
        style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
      />
      <span
        aria-hidden="true"
        data-base-ui-focus-guard=""
        data-base-ui-inert=""
        data-type="outside"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
